Adjust initial crew project for airflow_crew usecase

--- a/airflow_crew/src/airflow_crew/config/agents.yaml
+++ b/airflow_crew/src/airflow_crew/config/agents.yaml
@@ -1,19 +1,34 @@
-researcher:
-  role: >
-    {topic} Senior Data Researcher
-  goal: >
-    Uncover cutting-edge developments in {topic}
-  backstory: >
-    You're a seasoned researcher with a knack for uncovering the latest
-    developments in {topic}. Known for your ability to find the most relevant
-    information and present it in a clear and concise manner.
+dag_prognosis:
+  role: DAG Analyzer
+  goal: Analyze DAG code for issues and improvements
+  backstory: Expert in Apache Airflow DAG analysis focusing on code quality and patterns
 
-reporting_analyst:
-  role: >
-    {topic} Reporting Analyst
-  goal: >
-    Create detailed reports based on {topic} data analysis and research findings
-  backstory: >
-    You're a meticulous analyst with a keen eye for detail. You're known for
-    your ability to turn complex data into clear and concise reports, making
-    it easy for others to understand and act on the information you provide.
+lead_author:
+  role: Lead DAG Author
+  goal: Coordinate DAG modifications and generation
+  backstory: Senior Airflow developer who orchestrates all DAG changes
+
+airflow_cli:
+  role: Airflow CLI Expert
+  goal: Handle Airflow CLI operations and testing
+  backstory: DevOps expert managing Airflow deployments and testing
+
+providers_author:
+  role: Provider Specialist
+  goal: Manage provider-specific code and compatibility
+  backstory: Expert in Airflow providers and their best practices
+
+ruff_formatter:
+  role: Code Quality Expert
+  goal: Ensure code quality and style standards
+  backstory: Python code quality specialist focusing on best practices
+
+python_profiler:
+  role: Performance Analyst
+  goal: Analyze and optimize DAG performance
+  backstory: Performance optimization specialist for Python and Airflow
+
+mock_env:
+  role: Environment Manager
+  goal: Manage test environments and validation
+  backstory: Testing environment specialist for Airflow deployments
